--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@
 baseurl = "/"
 
 # Title of your site
-title = "Data Driven Network Biology"
+title = "ddNetBio"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
@@ -56,17 +56,17 @@ enableGitInfo = false
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Stanford University", url = "" } ]
+  organizations = [ { name = "Duke-NUS Medical School", url = "https://www.duke-nus.edu.sg/" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
 
   # Details for the Contact Widget
-  email = "test@example.org"
-  address = "Building 1 Room 1, Stanford University, California, 90210, USA"
-  office_hours = "Monday 10:00 to 13:00 or email for appointment"
-  phone = "888 888 88 88"
-  skype = "echo123"
+  email = "owen.rackham@duke-nus.edu.sg"
+  address = "Duke-NUS Medical School, 8 College Road, 169857"
+  office_hours = "Email for appointment"
+  phone = ""
+  skype = "owen.rackham"
   telegram = ""
   keybase = ""  # Your keybase.io username.
 
@@ -89,10 +89,10 @@ enableGitInfo = false
   #   1: Google Maps
   #   2: OpenStreetMap (Mapnik)
   #   3: OpenStreetMap (Mapbox)
-  map = 0
+  map = 1
   map_api_key = ""
-  latitude = "37.4275"
-  longitude = "-122.1697"
+  latitude = "1.281057"
+  longitude = "103.834197"
   zoom = 15
 
   # SITE SETUP
